fix add reg_off && findpasswd_off

--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -79,13 +79,10 @@ function SwitchMenu(obj,sty)
 	<h1 id="m10" onClick="SwitchMenu('sub10','m10')" class="menu"><ol id="p2">系统设置</ol>	</h1>
 		<ul class="submenu left_linght" id="sub10" >
 			<li><a href='?c=setting&a=index&sub=alipay' target='main'>网上支付设置</a></li>
-			<!--  <li><a href='?c=front&a=pageListIndex' target='main'>前台设置列表</a></li>-->
 			<li><a href='?c=agent&a=listagent' target='main'>代理级别设置</a></li>
-			<!--  <li><a href='?c=agentprice&a=pageListAgentprice' target='main'>代理设置2</a></li>-->
 			<li><a href='?c=setting&a=setupMain' target='main'>首页设置</a></li>
 			<li><a href='?c=setting&a=setOtherFrom' target='main'>计划任务设置</a></li>
-			<!--<li><a href='?c=faq&a=getFrom' target='main'>FAQ</a></li>-->
-			
+			<li><a href='?c=function&a=setFrom' target='main'>功能设置</a></li>
 	 	</ul>
 </div>
 <div><br></div>
