--- a/user/view/default/public/findpasswdfrom.html
+++ b/user/view/default/public/findpasswdfrom.html
@@ -6,11 +6,11 @@
 				<form  name='reg' action="?c=public&a=findPasswd" method='post'>
 				<table cellspacing="10" width="80%">
 				 <tr><td align="left" colspan="2"><img src="{{$STATIC}}/images/reg3.jpg" /></td></tr>
-				 <tr><td class="td_bgc right_reg" width="30%">用户名：</td>
-					 <td class="td_bgc right_2"><input name='username'  size="16"/>&nbsp;*</td></tr>
+				 <tr><td class="td_bgc right_reg" width="30%"><big>用户名：</big></td>
+					 <td class="td_bgc right_2"><input name='username'  size="24"/>&nbsp;*</td></tr>
 				  
-				 <tr><td class="td_bgc right_reg" width="30%">注册邮箱：</td>
-					 <td class="td_bgc right_2"><input name='email' size="16"/>&nbsp;*</td></tr>
+				 <tr><td class="td_bgc right_reg" width="30%"><big>注册邮箱：</big></td>
+					 <td class="td_bgc right_2"><input name='email' size="24"/>&nbsp;*</td></tr>
 				  
 				  
 				  <tr><td class="td_bgc" colspan="2" align="center" height="35"><input type="submit"  value="密码找回"></td></tr>
