--- a/user/view/default/public/register_n.html
+++ b/user/view/default/public/register_n.html
@@ -17,28 +17,28 @@
 					  <tr>
 						<td class="td_bgc right_reg" width="30%">用户：</td>
 						<td class="td_bgc right_2">
-						 <input name='username' type='text' id="wid2" value="" size="16"/>&nbsp;*
+						 <input name='username' id="wid2" value="" size="24"/>&nbsp;*
 						   <input type="button" name="Submit" id="wid3" value="检测用户名" onClick="check_user()"></td>
 					  </tr>
 					  <tr>
 						<td class="td_bgc right_reg">密码：</td>
-						<td class="td_bgc right_2"><input name='passwd' type='password' id="wid2" value="" size="16"/>&nbsp;*</td>
+						<td class="td_bgc right_2"><input name='passwd' type='password' id="wid2" size="24"/>&nbsp;*</td>
 					  </tr>
 					  <tr>
 						<td class="td_bgc right_reg">确认密码：</td>
-						<td class="td_bgc right_2"><input name='passwd2' type='password' id="wid2"  value="" size="16"/>&nbsp;*</td>
+						<td class="td_bgc right_2"><input name='passwd2' type='password' id="wid2" size="24"/>&nbsp;*</td>
 					  </tr>
 					  <tr>
 						<td class="td_bgc right_reg">电子邮件:</td>
-						<td class="td_bgc right_2"><input name='email' type='text' id="wid2" value="" size="16"/>&nbsp;*</td>
+						<td class="td_bgc right_2"><input name='email' id="wid2" size="24"/>&nbsp;*</td>
 					  </tr>
 					  <tr>
 						<td class="td_bgc right_reg">真实姓名:</td>
-						<td class="td_bgc right_2"><input name='name' type='text' id="wid2"  value="" size="16"/></td>
+						<td class="td_bgc right_2"><input name='name' id="wid2" size="24"/></td>
 					  </tr>
 					 <tr>
 						<td class="td_bgc right_reg">身份证:</td>
-						<td class="td_bgc right_2"><input type='text' name='ids' id="wid2" value="" /></td>
+						<td class="td_bgc right_2"><input name='ids' id="wid2" size="24"/></td>
 					  </tr>
 					 <tr>
 						 <td class="td_bgc td_hg" colspan="2" align="center" height="30"><input name="agree" type="checkbox" value="1">
