--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -73,7 +73,8 @@ function SwitchMenu(obj,sty)
 		<ul class="submenu left_linght" id="sub9" >
 			<li><a href='?c=question&a=pageQuestion' target='main'>用户提问</a></li>
 			<li><a href='?c=news&a=pageNews' target='main'>公告管理</a></li>
-			<li><a href='?c=mail&a=mailFrom' target='main'>邮件群发</a></li>			
+			<li><a href='?c=mail&a=mailFrom' target='main'>邮件群发</a></li>
+			<li><a href='?c=operatelog&a=operatelogPageList' target='main'>管理日志</a></li>			
 		</ul>
 			
 	<h1 id="m10" onClick="SwitchMenu('sub10','m10')" class="menu"><ol id="p2">系统设置</ol>	</h1>
