fix public.ctl.php is ajaxcheckuser

--- a/admin/view/default/setting/setother.html
+++ b/admin/view/default/setting/setother.html
@@ -13,7 +13,7 @@ function getcron()
 -->
 <div align="center">
 	<div class="wid_main mar_main" align="left">
-		<div class="block_top" align="left">当前位置：系统设置--> 其他功能设置</div>
+		<div class="block_top" align="left">当前位置：系统设置--> 计划任务设置</div>
 		<form  action="?c=setting&a=setOther" method='post'>
 		<table class="table_main2" cellpadding="0" cellspacing="1">
 			<tr><td colspan="2" class="bg_main"><b>计划任务设置</b></td></tr>
