--- a/admin/view/default/function/setfrom.html
+++ b/admin/view/default/function/setfrom.html
@@ -6,7 +6,9 @@
 		<div class="block_top" align="left">当前位置：系统设置--> 其他功能设置</div>
 		<form  action="?c=function&a=set" method='post'>
 		<table class="table_main2" cellpadding="0" cellspacing="1">
-			<tr><td colspan="2" class="bg_main"><b>计划任务设置</b></td></tr>
+			
+			<tr><td colspan="2" class="bg_main"><b>功能设置</b></td></tr>
+			
 			<tr><td >注册用户预存金额：</td>
 		        <td ><input name="reg_user_price" value="{{if $setting.reg_user_price}}{{$setting.reg_user_price/100}}{{else}}0{{/if}}"  size="10"/>&nbsp;元</td></tr> 
 		    
