--- a/user/view/default/public/error.html
+++ b/user/view/default/public/error.html
@@ -1,28 +1,13 @@
-<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-<div align="center">
-<div class="right">
-	<div class="error_box">
-		<table id="table_news" cellpadding="0" cellspacing="10" >
-			<tr>
-				<td width="550" height="330"valign="top">
-					<table width=100%>
-						<tr>
-							<td align="center">
-							<img src='{{$STATIC}}/images/error.jpg' width="388" height="62">
-							</td>
-						</tr>
-						<tr>
-							<td align="center" height="70" class="color_red">
-							<p><b><font size="+1">用户名或密码错误，请重新登陆</font></b></p>
-							</td>
-						</tr>
-						<tr>
-							<td align="center" height="270" class="color_red">&nbsp;</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-	  </table>
-	</div>
-</div>
+<style type='text/css'>
+.error {
+	padding-top:100px;
+}
+.error big{
+	color:red;
+}
+</style>
+
+<div align="center" class="error">
+	<p><img src='{{$STATIC}}/images/error.jpg' width="388" height="62"></p>
+	<p><big>用户名或密码错误，请重新登陆</big></p>
 </div>
