--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -53,7 +53,7 @@ function SwitchMenu(obj,sty)
 			<li><a href="?c=vhost&a=pageVhostByExpire_time&day=1" target='main'>过期列表</a></li>	
 			<li><a href="?c=vhostproduct&a=showProduct" target='main'>产品列表</a></li>	
 			<li><a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a></li>
-			
+			<li><a href="?c=productgroup&a=productgroupPageList" target='main'>产品分类列表</a></li>
 		</ul>
  	
 	<h1 id="m11" onClick="SwitchMenu('sub11','m11')" class="menu"><ol id="p6">非自动化产品</ol>	</h1>
