--- a/user/view/default/host/left.html
+++ b/user/view/default/host/left.html
@@ -1,23 +1,55 @@
-<div><table cellpadding="0" cellspacing="0" id="table_r"><tr><td height="5"></td></tr></table></div>
-<!--左部文件开始-->
-	  	<div class="left_main_vh">
-			<!--虚拟主机列表代码开始-->
-			<div class="left_host"></div>
-			<div class="left_box_host l_host_wid" align="left">
-				<table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#E5E5E5">
-				{{for $i=0;$i< count($products);$i++}}
-					<tr>
-						<td class="wid_2"></td>
-						<td class="host_l right_h" background="{{$STATIC}}images/lemu_over.jpg">
-						<a href="?c=host&a=showProductFrom&product_id={{$products[$i].id}}">{{$products[$i].name}}<br>
-						</td>
-						<td class="wid_l"></td>
-					</tr>
-					
+<style type='text/css'>
+.public_left {
+	width:180px;
+	padding-left:10px;
+	background-color:#F0FFFF;
+}
+.public_list {
+	height:30px;
+	font-size:16;
+	color:rgb(100,0,200);
+	background-color:#FFA500;
+}
+.public_host {
+	padding-top:8px;
+	padding-left:15px;
+	font-size:16;
+}
+.onMouseOver {
+	background-color:#D1D1D1;
+}
+</style>
+<script language='javascript'>
+$(document).ready(function(){
+	jQuery(".public_left div").mouseover(function(){
+		jQuery(this).addClass('onMouseOver');
+	});
+	jQuery(".public_left div").mouseout(function(){
+			jQuery(this).removeClass('onMouseOver');
+	});
+});
 
-					{{/for}}
-			  </table>
-			</div>
-			<!--虚拟主机列表代码结束-->
-		<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-		</div>
+</script>
+
+<div class='public_left'>
+	{{if $groups}}
+		{{for $f=0;$f< count($groups);$f++}}
+			<div class='public_list'><p>&nbsp;&nbsp;分类:{{$groups[$f].group_name}}</p></div>
+			{{for $i=0;$i< count($products);$i++}}
+				{{if $products[$i].upid == $groups[$f].group_id}}
+					<div class='public_host'><a href="?c=host&a=showProductFrom&product_id={{$products[$i].id}}">{{$products[$i].name}}</a></div>
+				{{/if}}
+			{{/for}}
+			
+		{{/for}}
+	{{else}}
+		<div class='public_list'><p>&nbsp;&nbsp;分类:自由类型</p></div>
+		{{for $i=0;$i< count($products);$i++}}
+		<div class='public_host'><a href="?c=host&a=showProductFrom&product_id={{$products[$i].id}}">{{$products[$i].name}}</a></div>
+		{{/for}}
+	
+	{{/if}}
+
+</div>
+
+
