--- a/user/view/default/host/left.html
+++ b/user/view/default/host/left.html
@@ -2,21 +2,30 @@
 .public_left {
 	width:180px;
 	padding-left:10px;
-	background-color:#F0FFFF;
+	font-weight:bold;
+	
 }
 .public_list {
 	height:30px;
 	font-size:16;
 	color:rgb(100,0,200);
 	background-color:#FFA500;
+	direction: rtl;
+	margin: 5px;
+	padding-bottom:1px;
 }
 .public_host {
-	padding-top:8px;
+	padding-top:5px;
+	padding-bottom:5px;
 	padding-left:15px;
 	font-size:16;
+	border:1px solid #CDC1C5;
+	margin: 5px;
+	background-color:#F5F5F5;
+	
 }
 .onMouseOver {
-	background-color:#D1D1D1;
+	background-color:#FFA500;
 }
 </style>
 <script language='javascript'>
