--- a/user/view/default/public/findpasswdfrom.html
+++ b/user/view/default/public/findpasswdfrom.html
@@ -1,22 +1,23 @@
-	<div align="center" class="right">
-		<table width="690" border="0" cellpadding="0" cellspacing="0" >
-			<tr><td colspan="2" background="{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
-		 	<tr><td colspan="2" height="5"></td></tr>
-			<tr><td width="690" height="479" background="{{$STATIC}}/images/Cloud_host_info_bg.jpg" valign="top">
-				<form  name='reg' action="?c=public&a=findPasswd" method='post'>
-				<table cellspacing="10" width="80%">
-				 <tr><td align="left" colspan="2"><img src="{{$STATIC}}/images/reg3.jpg" /></td></tr>
-				 <tr><td class="td_bgc right_reg" width="30%"><big>用户名：</big></td>
-					 <td class="td_bgc right_2"><input name='username'  size="24"/>&nbsp;*</td></tr>
-				  
-				 <tr><td class="td_bgc right_reg" width="30%"><big>注册邮箱：</big></td>
-					 <td class="td_bgc right_2"><input name='email' size="24"/>&nbsp;*</td></tr>
-				  
-				  
-				  <tr><td class="td_bgc" colspan="2" align="center" height="35"><input type="submit"  value="密码找回"></td></tr>
-				  
-				 
-				  </table>
-				   </form> </td> </tr>
-				</table>
-	</div>
+<style type='text/css'>
+.findpasswd {
+}
+.find_text {
+	padding-top:20px;
+	height:30px;
+	font-size:20;
+}
+.find_text input{
+	height:30px;
+	font-size:20;
+}
+</style>	
+	
+	
+<div align="center" class="findpasswd">
+	<form  name='reg' action="?c=public&a=findPasswd" method='post'>
+		<div class='find_img'><img src='{{$STATIC}}images/findpasswd.jpg'></div>
+		<div class='find_text'>用户名&nbsp;&nbsp;&nbsp;:<input name='username'  size="24"/>&nbsp;*</div>
+		<div class='find_text'>注册邮箱:<input name='email' size="24"/>&nbsp;*</div>
+		<div class='find_text'><input type="submit"  value="密码找回"></div>
+	</form>
+</div>
