--- a/admin/view/default/productgroup/productgroupadd.html
+++ b/admin/view/default/productgroup/productgroupadd.html
@@ -7,7 +7,7 @@
 			<tr><td colspan="2" class="bg_main"><b>增加产品组(分类)</b></td></tr>
 		  
 		   <tr><td class="wid_general" valign="top">产品分类名称:</td>
-				<td><input name="group_name" size="25" value="{{$productgroup.group_name}}" /></td></tr>
+				<td><input name="group_name" size="25" value="{{$productgroup.group_name}}" />*名称不能太长</td></tr>
 		  
 		  <tr><td>&nbsp;</td><td><input type="submit" value="确认" /></td> </tr>
 		 
